--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "projeto-interfaces",
   "version": "0.1.0",
+  "homepage": "projeto-interfaces/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
