--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "projeto-interfaces",
   "version": "0.1.0",
-  "homepage": "Projeto-Interfaces/",
+  "homepage": "projeto-interfaces/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
