--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: [10.x, 12.x, 14.x, 16.x, 18.x]
+          node-version: '14.x'
       - name: Build web-app
         run: |
           npm ci
