--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    using: 'node16'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v2
@@ -23,3 +22,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
+
+runs:
+  using: 'node16'
